Creating function stubs for the add book form.

--- a/book.html
+++ b/book.html
@@ -30,7 +30,7 @@
         <span class="error-msg"></span>
         <br>
 
-        <button type="button">Submit book</button>
+        <button type="button" id="add-book">Submit book</button>
     </form>
     
 </body>
