Styled error messages red

--- a/book.html
+++ b/book.html
@@ -6,6 +6,12 @@
     <title>Book list</title>
 
     <script defer src="js/main.js"></script>
+
+    <style>
+        .error-msg {
+            color: red;
+        }
+    </style>
 </head>
 <body>
     <h2>Add a Book</h2>
